# setproof-experimental

./: .ocamlformat  .ocamlformat-ignore  dune-project  setproof.opam
extra/: william.agda
lib/mparser-wrapper/: dune  mParser_wrapper.ml
src/: ast.ml  dune  elaborate.ml  ext_ast.ml  grammar.messages  grammar.mly  lexer.ml  lib.ml  main.ml  parser.ml  parserWrapper.ml  tast.ml  typeck.ml
test/: dune  main.ml
test/data/: example.set  random-grammars.set  simple-data.set
