opam-version: "2.0"
version: "~dev"
synopsis: "Proof assistant with UIP"
maintainer: "Setproof team"
authors: "Setproof team"
license: "MIT"
homepage: "https://github.com/HuStmpHrrr/setproof-experimental"
bug-reports: "https://github.com/HuStmpHrrr/setproof-experimental/issues"
depends: [
  "base"
  "dune"
  "earley"
  "ocaml" {>= "4.08"}
  "stdio"
]
build: ["dune" "build" "-j" jobs]
dev-repo: "git+https://github.com/HuStmpHrrr/setproof-experimental.git"
