opam-version: "2.0"
version: "~dev"
synopsis: "Proof assistant with UIP"
maintainer: "Setproof team"
authors: "Setproof team"
license: "MIT"
homepage: "https://github.com/HuStmpHrrr/setproof-experimental"
bug-reports: "https://github.com/HuStmpHrrr/setproof-experimental/issues"
depends: [
  "base"
  "dune"
  "mparser"
  "ocaml" {>= "4.08"}
  "ounit2" {with-test}
  "ppxlib"
  "ppx_deriving"
  "stdio"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test}]
]
dev-repo: "git+https://github.com/HuStmpHrrr/setproof-experimental.git"
