(library
 (name setproof)
 (modules
  (:standard \ main))
 (libraries base menhirLib ppxlib sedlex stdio)
 (preprocess
  (pps sedlex.ppx))
 ; (flags :standard -w -27 -w -33 -w -26 -w -9)
 )

(executable
 (name main)
 (public_name setproof)
 (libraries setproof)
 (modules main)
 ; (flags :standard -w -27 -w -33 -w -26 -w -9)
 )

(menhir
 (flags --table --canonical)
 (modules grammar))
