(library
 (name setproof)
 (modules
  (:standard \ main))
 (libraries base mparser ppxlib ppx_deriving.show stdio)
 (preprocess
  (pps ppx_deriving.show))
 ; (flags :standard -w -27 -w -33 -w -26 -w -9)
 )

(executable
 (name main)
 (public_name setproof)
 (libraries setproof)
 (modules main)
 ; (flags :standard -w -27 -w -33 -w -26 -w -9)
 )
